# embedeval

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/source/: api.rst  conf.py  index.rst  task_tutorial.rst  usage.rst
notebooks/: Extrinsic Task.ipynb
src/embedeval/: __init__.py  __main__.py  cli.py  embedding.py  errors.py  logger.py  parser.py  task.py  taskregistry.py  taskreport.py
src/embedeval/parsers/: word2vec_gensim.py  word2vec_simple.py
src/embedeval/tasks/: de_offense_detection.py  en_got_odd_one_out.py  en_got_word_analogy.py  odd_one_out.py  offense_dedection.py  offense_detection.py  skeleton.py.in  word_analogy.py
tests/: benchmark_parser.py  conftest.py  test_cli.py  test_parser.py  test_sample.py  test_task_registry.py  test_taskreport.py
tests/data/: download.sh  sources.txt
tests/integration/features/: Built-in-Tasks.feature  German-Word-Embedding.feature  Task-Management.feature
tests/tasks/: test_odd_one_out.py  test_offense_detection.py  test_word_analogy.py
