[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E203,W503,W504

[tool:pytest]
addopts = -p no:warnings
testpaths = tests/

[mypy]
ignore_missing_imports = True

[isort]
known_first_party=embedeval
known_third_party=pytest,setuptools,pandas,nltk
multi_line_output=3
